feat: implement authentication interceptor, update login form, and enhance user profile handling